Attempt 3 to fix CodeMirror alignment

--- a/cali/Cali.css
+++ b/cali/Cali.css
@@ -368,6 +368,6 @@ input.search-button {
 	}
 }
 
-.CodeMirror {
+.ve-init-mw-desktopArticleTarget .cm-s-default {
 	padding: 0 !important;
 }
